--- a/QGIS/MAGIC2021/agenda.html
+++ b/QGIS/MAGIC2021/agenda.html
@@ -109,7 +109,7 @@ Creating Maps
 Exporting Maps and Data
 - Exporting Map Layout
 - Map Images
-- PDF Maps
+- SVG and PDF Maps
 - Web Maps (covered in next section)
 
 <br>
