--- a/QGIS/MAGIC2021/agenda.html
+++ b/QGIS/MAGIC2021/agenda.html
@@ -125,15 +125,27 @@ As time permits
 - Create a Map Atlas
 - Georeferencing a raster image
 
+---
 
 
 
+Installing QGIS
+
+
+What is QGIS
+
+
+Interface Overview
+
+
+Explore Interface
 
 
 
 
 
 ---
+
 
 
  - <a href="https://geojson.io" target="_blank">Geojson.io</a>
