--- a/QGIS/MAGIC2021/agenda.html
+++ b/QGIS/MAGIC2021/agenda.html
@@ -28,25 +28,57 @@ class: center, middle
 
 ##### Questions? email Professor Seeger cjseeger@iastate.edu
 
-### This presentation: https://dspg-isu.github.io/trainingQGIS/
+### This presentation: https://isueogtp.github.io/Workshops/QGIS/MAGIC2021/agenda.html
 
 
 _Use arrow keys to move forward/backwards through slide show._
 
 ---
 
+
+### Welcome and Introductions
+
+Christopher J. Seeger - 
+Professor, Iowa State University
+
+<br>
+
+Amy Logan - 
+Research Scientist, Iowa State University GIS Facility
+
+<br>
+
+Thomas Petitti - 
+Geospatial Technology Program Intern
+
+<br>
+
+<img src="images/chris_amy_headshots.png" alt="" style="width: 50%;"/>
+
+
+
+---
+### Workshop Overview
+
+Data files are located at https://github.com/ISUEOGTP/Workshops/tree/main/QGIS/MAGIC2021
+
+Direct download is: 
+
+
+---
+
+
 ### Today's Agenda:
 
 ####8:00 - 8:35####
-Welcome<br>
-Introductions<br>
+Welcome and Introductions<br>
 Workshop Overview<br>
 Getting Started<br>
 
 - Installing QGIS
 - What is QGIS?
 - Interface Overview
-- Explore some Sample Data
+- Explore Sample Data & Project
 
 5-minute break
 
@@ -129,16 +161,33 @@ As time permits
 
 
 
-Installing QGIS
 
+---
 
-What is QGIS
+### Installing QGIS ###
+To install QGIS, visit https://www.qgis.org/en/site/ and click the Green Download Now button. Version 3.10 or above is recommended.
 
+<br>
 
-Interface Overview
+Mac OS
+- Please click the link for the alternative Installers. You can optionally use these to install QGIS, however the part we want you to read on the Alternative Build installers page is the information on how to open QGIS the first time so the Mac OS security knows it is an approved software.
 
+ <br>
 
-Explore Interface
+Windows OS
+- For this course, don't install the OSGeo4W installers.  Instead install one of the Standalone installers for your system. If you have Windows 10 then install the 64 Bit version 3.10.
+
+<img src="images/qgisVersion.png" alt="" style="width: 60%;"/>
+ 
+---
+
+ ### What is QGIS
+
+---
+### Interface Overview
+
+---
+###  Explore Interface
 
 
 
@@ -149,7 +198,7 @@ Explore Interface
 
 
  - <a href="https://geojson.io" target="_blank">Geojson.io</a>
- - <a href="https://qgis.org" target="_blank">QGIS.org</a> and Exploring Sample Data
+
 
 
 
