--- a/QGIS/MAGIC2021/agenda.html
+++ b/QGIS/MAGIC2021/agenda.html
@@ -35,6 +35,15 @@ _Use arrow keys to move forward/backwards through slide show._
 
 ---
 
+### Workshop Overview
+
+1. This workshop Zoom is being recorded <br><br>
+1. Data files https://github.com/ISUEOGTP/Workshops/blob/main/QGIS/MAGIC2021/data.zip <br><br>
+1. We will utilize Zoom chat to share URLs, please also post general questions here. There will also be opportunities to ask questions via mic, but please keep mic otherwize muted.
+
+
+---
+
 
 ### Welcome and Introductions
 
@@ -55,14 +64,6 @@ Geospatial Technology Program Intern
 
 <img src="images/chris_amy_headshots.png" alt="" style="width: 50%;"/>
 
-
-
----
-### Workshop Overview
-
-Data files are located at https://github.com/ISUEOGTP/Workshops/tree/main/QGIS/MAGIC2021
-
-Direct download is: 
 
 
 ---
