--- a/QGIS/MAGIC2021/agenda.html
+++ b/QGIS/MAGIC2021/agenda.html
@@ -153,6 +153,7 @@ Practice what you have learned
 ####11:40 – 12:00####
 As time permits
 - Export a Web Map
+- DEM Support
 - Working with Geotagged Photos
 - Importing OSM Data
 - Create a Map Atlas
@@ -160,10 +161,6 @@ As time permits
 
 ---
 
-
-
-
----
 
 ### Installing QGIS ###
 To install QGIS, visit https://www.qgis.org/en/site/ and click the Green Download Now button. Version 3.10 or above is recommended.
@@ -182,26 +179,42 @@ Windows OS
  
 ---
 
- ### What is QGIS
+ ### What is QGIS?
+
+From the QGIS website, <br><br>
+
+"QGIS is a user friendly Open Source Geographic Information System (GIS) licensed under the GNU General Public License. <br><br>
+QGIS is an official project of the Open Source Geospatial Foundation (OSGeo). 
+<br><br>
+It runs on Linux, Unix, Mac OSX, Windows and Android and supports numerous vector, raster, and database formats and functionalities."
 
 ---
 ### Interface Overview
 
----
-###  Explore Interface
-
-
-
+<img src="images/QGISinterface.png" alt="" style="width: 100%;"/>
 
 
 ---
 
+### Resources
 
+There are many online sources for QGIS, but first and foremost is the QGIS documentation https://docs.qgis.org/3.16/en/docs/index.html
+
+<br>
+
+Additional resources can be found on this resources.html page.
+
+---
+###  Explore Interface - Hands on!!!
+
+Data files https://github.com/ISUEOGTP/Workshops/blob/main/QGIS/MAGIC2021/data.zip <br><br>
+
+
+
+
+---
 
  - <a href="https://geojson.io" target="_blank">Geojson.io</a>
-
-
-
 
 ---
 
