--- a/QGIS/MAGIC2021/agenda.html
+++ b/QGIS/MAGIC2021/agenda.html
@@ -62,7 +62,7 @@ Geospatial Technology Program Intern
 
 <br>
 
-<img src="images/chris_amy_headshots.png" alt="" style="width: 50%;"/>
+<img src="images/chris_amy_headshots.png" alt="" style="width: 50%;"/><img src="images/participantMap.png" alt="" style="width: 50%;"/>
 
 
 
