--- a/QGIS/MAGIC2021/agenda.html
+++ b/QGIS/MAGIC2021/agenda.html
@@ -190,6 +190,14 @@ QGIS is an official project of the Open Source Geospatial Foundation (OSGeo).
 It runs on Linux, Unix, Mac OSX, Windows and Android and supports numerous vector, raster, and database formats and functionalities."
 
 ---
+<img src="images/arcgisvsqgis1.png" alt="" style="width: 100%;"/>
+---
+<img src="images/arcgisvsqgis2.png" alt="" style="width: 100%;"/>
+---
+<img src="images/arcgisvsqgis3.png" alt="" style="width: 100%;"/>
+---
+
+
 ### Interface Overview
 
 <img src="images/QGISinterface.png" alt="" style="width: 100%;"/>
