--- a/QGIS/MAGIC2021/agenda.html
+++ b/QGIS/MAGIC2021/agenda.html
@@ -28,7 +28,9 @@ class: center, middle
 
 ##### Questions? email Professor Seeger cjseeger@iastate.edu
 
-### This presentation: https://isueogtp.github.io/Workshops/QGIS/MAGIC2021/agenda.html
+### Data: https://github.com/ISUEOGTP/Workshops/blob/main/QGIS/MAGIC2021/data.zip
+
+#### This presentation: https://isueogtp.github.io/Workshops/QGIS/MAGIC2021/agenda.html
 
 
 _Use arrow keys to move forward/backwards through slide show._
