--- a/QGIS/MAGIC2021/agenda.html
+++ b/QGIS/MAGIC2021/agenda.html
@@ -39,7 +39,7 @@ _Use arrow keys to move forward/backwards through slide show._
 
 ### Workshop Overview
 
-1. This workshop Zoom is being recorded <br><br>
+1. This workshop is being recorded <br><br>
 1. Data files https://github.com/ISUEOGTP/Workshops/blob/main/QGIS/MAGIC2021/data.zip <br><br>
 1. We will utilize Zoom chat to share URLs, please also post general questions here. There will also be opportunities to ask questions via mic, but please keep mic otherwize muted.
 
