--- a/QGIS/MAGIC2021/agenda.html
+++ b/QGIS/MAGIC2021/agenda.html
@@ -26,9 +26,8 @@ class: center, middle
 ## MAGIC Essentials of QGIS Workshop 
 ### January 8, 2021
 
-##### Questions? email Professor Seeger cjseeger@iastate.edu
 
-### Data: https://github.com/ISUEOGTP/Workshops/blob/main/QGIS/MAGIC2021/data.zip
+#### Data: https://github.com/ISUEOGTP/Workshops/blob/main/QGIS/MAGIC2021/data.zip
 
 #### This presentation: https://isueogtp.github.io/Workshops/QGIS/MAGIC2021/agenda.html
 
@@ -49,12 +48,12 @@ _Use arrow keys to move forward/backwards through slide show._
 
 ### Welcome and Introductions
 
-Christopher J. Seeger - 
+Christopher J. Seeger - cjseeger@iastate.edu <br>
 Professor, Iowa State University
 
 <br>
 
-Amy Logan - 
+Amy Logan - amylogan@iastate.edu <br>
 Research Scientist, Iowa State University GIS Facility
 
 <br>
@@ -64,14 +63,14 @@ Geospatial Technology Program Intern
 
 <br>
 
-<img src="images/chris_amy_headshots.png" alt="" style="width: 50%;"/><img src="images/participantMap.png" alt="" style="width: 50%;"/>
+<img src="images/chris_amy_headshots.png" alt="" style="width: 50%;"/>    <img src="images/participantMap.png" alt="" style="width: 45%;"/>
 
 
 
 ---
 
 
-### Today's Agenda:
+### Today's Agenda and Course Links
 
 ####8:00 - 8:35####
 Welcome and Introductions<br>
