--- a/QGIS/DSN546_2021/Index.html
+++ b/QGIS/DSN546_2021/Index.html
@@ -23,7 +23,7 @@ class: center, middle
 
 ## QGIS Workshops
 ### DSN 546 Empowerment through Action: <br> Design with Vulnerable People
-### February 22, 2021
+#### February 22, 2021
 
 
 
@@ -32,6 +32,10 @@ This site will serve as an access point for links needed to day and for additioa
 
  QGIS Install <a href="https://isueogtp.github.io/Workshops/QGIS/Installing%20QGIS.pdf" target="_blank">How to Install QGIS</a><br>
  Data for Today <a href="https://isueogtp.github.io/Workshops/QGIS/MAGIC2021/data.zip" target="_blank">Data</a><br>
+
+ESRI World Grey Canvas - https://server.arcgisonline.com/ArcGIS/rest/services/Canvas/World_Light_Gray_Base/MapServer/tile/{z}/{y}/{x} <br><br>
+ESRI World Imagery - https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x} <br>
+
 
 
 
