--- a/QGIS/DSN546_2021/Index.html
+++ b/QGIS/DSN546_2021/Index.html
@@ -21,9 +21,9 @@
 
 class: center, middle
 
-## QGIS Workshops
+## QGIS Workshop - February 22, 2021
 ### DSN 546 Empowerment through Action: <br> Design with Vulnerable People
-#### February 22, 2021
+
 
 
 
