--- a/QGIS/DSN546_2021/Index.html
+++ b/QGIS/DSN546_2021/Index.html
@@ -28,7 +28,7 @@ class: center, middle
 
 
 
-This site will serve as an access point for links needed to day and for additioanl help sheets in the next week or so as you progress with your project.
+This site will serve as an access point for links needed to day and for additional help sheets in the next week or so as you progress with your project.
 
  QGIS Install <a href="https://isueogtp.github.io/Workshops/QGIS/Installing%20QGIS.pdf" target="_blank">How to Install QGIS</a><br>
  Data for Today <a href="https://isueogtp.github.io/Workshops/QGIS/MAGIC2021/data.zip" target="_blank">Data</a><br>
