--- a/QGIS/MWBD/agenda.html
+++ b/QGIS/MWBD/agenda.html
@@ -23,7 +23,7 @@
 
 class: center, middle
 
-# MWBD QGIS Workshop 
+# MWBD QGIS Workshop DRAFT!!!!!!
 ### May 20, 2021  <br>
 <br><br>
 
@@ -31,6 +31,8 @@ Christopher J. Seeger - cjseeger@iastate.edu <br>
 Professor, Iowa State University
 
 <br>
+
+#### This doc is being updated and will be available on May 20th.
 
 #### Data: https://github.com/ISUEOGTP/Workshops/blob/main/QGIS/MAGIC2021/data.zip
 
