--- a/QGIS/MWBD/agenda2.html
+++ b/QGIS/MWBD/agenda2.html
@@ -30,11 +30,9 @@ class: center, middle
 Christopher J. Seeger - cjseeger@iastate.edu <br>
 Professor, Iowa State University
 
-<br>
+<br><br>
 
-#### This doc is being updated and will be available on May 20th.
-
-#### Data: https://github.com/ISUEOGTP/Workshops/blob/main/QGIS/MAGIC2021/data.zip
+#### Data: https://isueogtp.github.io/Workshops/QGIS/MWBD/data.zip
 
 #### This presentation: https://isueogtp.github.io/Workshops/QGIS/MWBD/agenda.html
 
@@ -50,32 +48,22 @@ _Use arrow keys to move forward/backwards through slide show._
 1. We will utilize Zoom chat to share URLs, please also post general questions here. There will also be opportunities to ask questions via mic, but please keep mic otherwise muted.
 
 
----
-
-
-### Welcome and Introductions
-
-
-
-
-
-<img src="images/chris_amy_headshots.png" alt="" style="width: 50%;"/>    <img src="images/participantMap.png" alt="" style="width: 45%;"/>
-
-
 
 ---
 
 
-### Today's Agenda Overview
+### Introduction
 
-8:00 - 8:35 Welcome; Introductions; Overview; Getting Started; Break<br><br>
-8:40 – 9:15 Loading Data, Styling Data <br><br>
-9:35 - 10:00 Working with tables <br><br>
-10:00 – 10:20 Challenge Problem and Practice <br><br>
-10:20 – 10:50 Spatial Processing; Plugins; Creating Data; Break/Practice <br><br>
-11:00 – 11:30 Creating Maps; Exporting Maps <br><br>
-11:30 – 11:40 Practice what you have learned <br><br>
-11:40 – 12:00 Export a Web Map; DEM Support; Geotagged Photos; Importing OSM Data; Map Atlas; Georeferencing a raster image<br><br>
+<b>A bit about what I do ...</b><br><br>
+- Data for Decision Makers https://indicators.extension.iastate.edu/#DDMs <br><br>
+
+<b>Participatory Mapping</b><br><br>
+
+- Public Participation GIS (PPGIS)<br><br>
+- Facilitated Volunteered Geographic Information (VGI)
+
+
+
 
 
 ---
