--- a/QGIS/MWBD/agenda.html
+++ b/QGIS/MWBD/agenda.html
@@ -23,34 +23,18 @@
 
 class: center, middle
 
-# MWBD QGIS Workshop DRAFT!!!!!!
-### May 20, 2021  <br>
+# Open Mapping Tools for Everyone
+### MWBD - May 20, 2021  <br>
 <br><br>
 
 Christopher J. Seeger - cjseeger@iastate.edu <br>
 Professor, Iowa State University
 
-<br>
+<br><br>
 
-#### This doc is being updated and will be available on May 20th.
+#### Data: https://isueogtp.github.io/Workshops/QGIS/MWBD/MWBD-QGIS-Data.zip
 
-#### Data: https://github.com/ISUEOGTP/Workshops/blob/main/QGIS/MAGIC2021/data.zip
-
-#### This presentation: https://isueogtp.github.io/Workshops/QGIS/MWBD/agenda.html
-
-<br>
-_Use arrow keys to move forward/backwards through slide show._
-
----
-
-### Workshop Overview
-
-1. This workshop is being recorded <br><br>
-1. Data files: <br><br>
-1. We will utilize Zoom chat to share URLs, please also post general questions here. There will also be opportunities to ask questions via mic, but please keep mic otherwise muted.
-
-
----
+#### This presentation: https://isueogtp.github.io/Workshops/QGIS/MWBD/qgis.pdf
 
 
 
