--- a/QGIS/visioning2022/agenda.html
+++ b/QGIS/visioning2022/agenda.html
@@ -28,9 +28,9 @@ class: center, middle
 
 
 
-#### Data: https://github.com/ISUEOGTP/Workshops/blob/main/QGIS/MAGIC2021/data.zip
+#### Data: https://github.com/ISUEOGTP/Workshops/blob/main/QGIS/visioning2022/data.zip
 
-#### This presentation: https://isueogtp.github.io/Workshops/QGIS/MAGIC2021/agenda.html
+#### This presentation: https://isueogtp.github.io/Workshops/QGIS/visioning2022/agenda.html#1
 
 <br>
 _Use arrow keys to move forward/backwards through slide show._
@@ -39,15 +39,15 @@ _Use arrow keys to move forward/backwards through slide show._
 
 ### Workshop Overview
 
-1. This workshop is being recorded <br><br>
-1. Data files https://github.com/ISUEOGTP/Workshops/blob/main/QGIS/MAGIC2021/data.zip <br><br>
-1. We will utilize Zoom chat to share URLs, please also post general questions here. There will also be opportunities to ask questions via mic, but please keep mic otherwize muted.
+1. This workshop is NOT being recorded! <em>fortunately...</em><br><br>
+1. Data files https://github.com/ISUEOGTP/Workshops/blob/main/QGIS/visionong2022/data.zip <br><br>
+1. Refering to item #1, feel free to ask questions as we proceed. While I have a plan, today is a bit on off-the-cuff. In the event that your question is a bit more complex to answere today, we will put it in the parking lot for our next session.
 
 
 ---
 
 
-### Welcome and Introductions
+### Welcome and Introductions (including to those that contributed previously!)
 
 Christopher J. Seeger - cjseeger@iastate.edu <br>
 Professor, Iowa State University
@@ -60,7 +60,7 @@ Research Scientist, Iowa State University GIS Facility
 <br>
 
 Thomas Petitti - 
-Geospatial Technology Program Intern
+Former Geospatial Technology Program Intern
 
 <br>
 
@@ -73,14 +73,23 @@ Geospatial Technology Program Intern
 
 ### Today's Agenda Overview
 
-8:00 - 8:35 Welcome; Introductions; Overview; Getting Started; Break<br><br>
-8:40 – 9:15 Loading Data, Styling Data <br><br>
-9:35 - 10:00 Working with tables <br><br>
-10:00 – 10:20 Challenge Problem and Practice <br><br>
-10:20 – 10:50 Spatial Processing; Plugins; Creating Data; Break/Practice <br><br>
-11:00 – 11:30 Creating Maps; Exporting Maps <br><br>
-11:30 – 11:40 Practice what you have learned <br><br>
-11:40 – 12:00 Export a Web Map; DEM Support; Geotagged Photos; Importing OSM Data; Map Atlas; Georeferencing a raster image<br><br>
+8:30 Welcome; Introductions; Overview; Getting Started & resources<br><br>
+8:45 Make some data!  Using http://www.GeoJson.io <br><br>
+9:00 Setup environment, Loading Data, Styling Data <br><br>
+9:30 Quick break <br><br>
+9:40 Working with tables - a simple data join<br><br>
+10:00 Importing lat/long data & Geotagged Photos (geocoding - not yet!)<br><br>
+10:15 Brief introduction to Digitizing
+11:25 Challenge Problem and Practice (Join ACS data to county shapefile)<br><br>
+10:40 Quick break <br><br>
+10:45 Fulcrum and collected GPS data (route data from Strava)      
+11:10 Intro to Spatial Processing; Plugins - Buffering, Intersection etc.<br><br>
+11:30 Exporting Maps <br><br>
+11:40 Practice what you have learned <br><br>
+11:55 Wrap up and discuss what is next ...
+        
+Other topics of interest
+Creating Map Layouts; Geocoding; Export a Web Map; DEM Support; Importing OSM Data; Map Atlas???; Georeferencing a raster image<br><br>
 
 
 ---
