--- a/QGIS/visioning2022/index.html
+++ b/QGIS/visioning2022/index.html
@@ -21,19 +21,20 @@
   <body>
     <textarea id="source">
 
-class: center, middle
+class: left, middle
 
-# Chris's INFORMAL intro to QGIS!
-### October 2022  <br>
+## Chris's INFORMAL intro to QGIS!
+#### October 2022  <br>
 
-class: center, left
+
     
-1. October 7 - Intro to QGIS Workshop<br><br>
-1. Additional Meetings in person or Via Zoom<br>
-1. Answers to specific questions
-1. Misc. other QGIS stuff I think is interesting to share ...
+1. [October 7 - Intro to QGIS Workshop](agenda.html)<br><br>
+1. Additional Meetings in person or Via Zoom<br><br>
+1. Answers to specific questions<br><br>
+1. Misc. other QGIS stuff I think is interesting to share ...<br><br>
 
-_Use arrow keys to move forward/backwards through slide show._
+_Use arrow keys to move forward/backwards through slide show._<br>
+This slide deck created with [remarkjs](https://remarkjs.com)
 
 ---
 
