--- a/QGIS/visioning2022/index.html
+++ b/QGIS/visioning2022/index.html
@@ -24,21 +24,23 @@
 class: left, middle
 
 ## Chris's INFORMAL intro to QGIS!
-#### October 2022  <br>
-
-
     
-1. [October 7 - Intro to QGIS Workshop](agenda.html)<br><br>
-1. Additional Meetings in person or Via Zoom<br><br>
-1. Answers to specific questions<br><br>
-1. Misc. other QGIS stuff I think is interesting to share ...<br><br>
+* [October 7, 2022 - Intro to QGIS Workshop](agenda.html)
+ - [QGIS Task Sheets](https://www.extension.iastate.edu/communities/gis/quicktasksheets) search for QGIS
+ - currently updating this entire series
+ - [QGIS Tutorials and Tips](https://www.qgistutorials.com/en/)
+ - [QGIS User Guide](https://docs.qgis.org/testing/en/docs/user_manual/index.html)
+ - _Will add more as needed!_
+* Answers to specific questions if we can do by Zoom or a task sheet<br><br>
+* Misc. other QGIS stuff I think is interesting to share ...<br><br>
 
-_Use arrow keys to move forward/backwards through slide show._<br>
-This slide deck created with [remarkjs](https://remarkjs.com)
+_Use arrow keys to move forward/backwards through slide show._<br><br>
+
+###### This slide deck created with [remarkjs](https://remarkjs.com) - it is a nifty little tool!
 
 ---
 
-
+Nothing to see here yet!
 
 
 
